--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--/**
- * Thiết Kế Bởi: Nguyễn Ngọc Huy
- * Website: http://itmultimediavietnam.com/
- * Facebook: https://www.facebook.com/Nguyen.Ngoc.Huy.VE.LP
- * Phone: 0967069755
-**/-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -106,10 +100,10 @@ button:active {
 </style>
 </head>
 <body>
-<script src="js/three.min.js" ></script>
-<script src="js/tween.min.js" ></script>
-<script src="js/TrackballControls.js" ></script>
-<script src="js/CSS3DRenderer.js" ></script>
+<script src="../js/three.min.js" ></script>
+<script src="../js/tween.min.js" ></script>
+<script src="../js/TrackballControls.js" ></script>
+<script src="../js/CSS3DRenderer.js" ></script>
 
 <div id="container"></div>
 <div id="info">3D - Bảng Tuần Hoàn Hóa Học</div>
