--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ button:active {
 </style>
 </head>
 <body>
-<script src="js/three.min.js" ></script>
-<script src="js/tween.min.js" ></script>
-<script src="js/TrackballControls.js" ></script>
-<script src="js/CSS3DRenderer.js" ></script>
+<script src="http://kharidz.me/js/three.min.js" ></script>
+<script src="http://kharidz.me/js/tween.min.js" ></script>
+<script src="http://kharidz.me/js/TrackballControls.js" ></script>
+<script src="http://kharidz.me/js/CSS3DRenderer.js" ></script>
 
 <div id="container"></div>
 <div id="info">3D - Bảng Tuần Hoàn Hóa Học</div>
