--- a/index.html
+++ b/index.html
@@ -1,4 +1,41 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!DOCTYPE html>
+<html xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
+<head>
+<meta content='text/html; UTF-8' http-equiv='content-type'/>
+<title>Khải Đẹp Zai :*</title>
+<meta content='text/html; charset=UTF-8' http-equiv='content-type'/>
+<meta content='cache' http-equiv='cache-control'/>
+<meta content='en' http-equiv='content-language'/>
+<meta content='7 days' http-equiv='revisit-after'/>
+<meta content='Hẳn Đây Là Khải Đẹp Zai :*' name='description'/>
+<meta content='Khải Nguyễn' name='author'/>
+<meta content='Khải Nguyễn' name='copyright'/>
+<meta content='Khải Nguyễn' name='generator'/>
+<meta content='index, follow' name='robots'/>
+<meta content='Khải Đẹp Zai :*' name='DC.title'/>
+<meta content='KKhải Đẹp Zai :*' property='og:title'/>
+<meta content='Hẳn Đây Là Khải Đẹp Zai :*' property='og:description'/>
+<meta content='https://kharidev.me/' property='og:url'/>
+<meta content='website' property='og:type'/>
+<meta content='http://i.imgur.com/Jyy2PMO.png' property='og:image'/>
+<meta content='Khải Đẹp Zai :*' property='og:site_name'/>
+<meta content='summary' name='twitter:card'/>
+<meta content='https://kharidev.me/' name='twitter:site'/>
+<meta content='Khải Đẹp Zai :*' property='twitter:title'/>
+<meta content='Hẳn Là Khải Đẹp Zai :*' name='twitter:description'/>
+<meta content='http://i.imgur.com/Jyy2PMO.png' name='twitter:image'/>
+<meta content='https://kharidev.me/' name='twitter:url'/>
+<meta content='http://i.imgur.com/Jyy2PMO.png' itemprop='image'/>
+<meta content='Khari Official IT' property='og:site_name'/>
+<meta content='vi_VN' property='og:locale'/>
+<!-- Customize meta tags here -->
+<meta content='Khari Đz, khải đz, khari dz, khải, nguyễn khải, khari nguyen' name='keywords'/>
+<meta content='1405880212755809' property='fb:app_id'/>
+<meta content='100004787801918' property='fb:admins'/>
+<meta content='https://www.facebook.com/KhariNguyen.Net' property='article:publisher'/>
+<meta content='https://www.facebook.com/KhariNguyen.Net' property='article:author'/>
+<meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
 <style>h1 {
 	font-size: 60px;
 	font-weight: normal;
