--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <!DOCTYPE html>
-<html xmlns='http://www.w3.org/1999/xhtml' xmlns:b='http://www.google.com/2005/gml/b' xmlns:data='http://www.google.com/2005/gml/data' xmlns:expr='http://www.google.com/2005/gml/expr'>
+<html>
 <head>
 <meta content='text/html; UTF-8' http-equiv='content-type'/>
 <title>Khải Đẹp Zai :*</title>
@@ -41,8 +40,9 @@
 	font-size: 60px;
 	font-weight: normal;
 	margin: 0;
-    font-family: 'Chelsea Market', Georgia, serif;
-    color: #000;
+	text-align: center;
+	font-family: 'Chelsea Market', Georgia, serif;
+	color: #000;
 	line-height: 1;
 }</style>
 <h1>Nhìn Cái Giề :3</h1>
