--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <meta content='Hẳn Đây Là Khải Đẹp Zai :*' property='og:description'/>
 <meta content='https://kharidev.me/' property='og:url'/>
 <meta content='website' property='og:type'/>
-<meta content='https://graph.facebook.com/100004787801918/picture?width=500&height=500' property='og:image'/>
+<meta content='https://graph.facebook.com/100004787801918/picture?width=500&amp;height=500' property='og:image'/>
 <meta content='Khải Đẹp Zai :*' property='og:site_name'/>
 <meta content='summary' name='twitter:card'/>
 <meta content='https://kharidev.me/' name='twitter:site'/>
 <meta content='Khải Đẹp Zai :*' property='twitter:title'/>
 <meta content='Hẳn Là Khải Đẹp Zai :*' name='twitter:description'/>
-<meta content='https://graph.facebook.com/100004787801918/picture?width=500&height=500' name='twitter:image'/>
+<meta content='https://graph.facebook.com/100004787801918/picture?width=500&amp;height=500' name='twitter:image'/>
 <meta content='https://kharidev.me/' name='twitter:url'/>
-<meta content='https://graph.facebook.com/100004787801918/picture?width=500&height=500' itemprop='image'/>
+<meta content='https://graph.facebook.com/100004787801918/picture?width=500&amp;height=500' itemprop='image'/>
 <meta content='Khari Official IT' property='og:site_name'/>
 <meta content='vi_VN' property='og:locale'/>
 <!-- Customize meta tags here -->
@@ -36,6 +36,7 @@
 <meta content='https://www.facebook.com/KhariNguyen.Net' property='article:author'/>
 <meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
 </head>
+<body>
 <style>h1 {
 	font-size: 60px;
 	font-weight: normal;
@@ -46,3 +47,5 @@
 	line-height: 1;
 }</style>
 <h1>Nhìn Cái Giề :3</h1>
+</body>
+</html>
