--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <meta content='Hẳn Đây Là Khải Đẹp Zai :*' property='og:description'/>
 <meta content='https://kharidev.me/' property='og:url'/>
 <meta content='website' property='og:type'/>
-<meta content='https://graph.facebook.com/100004787801918/picture?width=500&height=500' property='og:image'/>
+<meta content='../100004787801918.jpg' property='og:image'/>
 <meta content='Khải Đẹp Zai :*' property='og:site_name'/>
 <meta content='summary' name='twitter:card'/>
 <meta content='https://kharidev.me/' name='twitter:site'/>
 <meta content='Khải Đẹp Zai :*' property='twitter:title'/>
 <meta content='Hẳn Là Khải Đẹp Zai :*' name='twitter:description'/>
-<meta content='https://graph.facebook.com/100004787801918/picture?width=500&height=500' name='twitter:image'/>
+<meta content='../100004787801918.jpg' name='twitter:image'/>
 <meta content='https://kharidev.me/' name='twitter:url'/>
-<meta content='https://graph.facebook.com/100004787801918/picture?width=500&height=500' itemprop='image'/>
+<meta content='../100004787801918.jpg' itemprop='image'/>
 <meta content='Khari Official IT' property='og:site_name'/>
 <meta content='vi_VN' property='og:locale'/>
 <!-- Customize meta tags here -->
